<resources>
    <string name="app_name">MyMoney</string>

    <!-- Tools -->
    <string name="tools_date" translatable="false">29.01.1994</string>
    <string name="tools_time" translatable="false">23:43</string>
    <string name="tools_number" translatable="false">29</string>
    <string name="tools_amount" translatable="false">1994.29</string>
    <string name="tools_category" translatable="false">Категория</string>

    <!-- Actions -->
    <string name="action_add">Добавить</string>
    <string name="action_save">Сохранить</string>
    <string name="action_apply">Применить</string>
    <string name="action_edit">Редактировать</string>
    <string name="action_delete">Удалить</string>
    <string name="action_close">Закрыть</string>

    <!-- Menu Main -->
    <string name="menu_main_home">Главная</string>
    <string name="menu_main_categories">Категории</string>
    <string name="menu_main_accounts">Счета</string>
    <string name="menu_main_sms_parser">Обработчики СМС</string>
    <string name="menu_main_history">История</string>
    <string name="menu_main_settings">Настройки</string>

    <!-- Activity Transaction  -->
    <string name="activity_transaction_income">Добавление дохода</string>
    <string name="activity_transaction_outcome">Добавление расхода</string>
    <string name="activity_transaction_edit">Редактироание транзакции</string>
    <string name="activity_transaction_date_hint">Дата проведения транзакции</string>
    <string name="activity_transaction_amount_hint">Сумма</string>
    <string name="activity_transaction_amount_error">Введите сумму</string>
    <string name="activity_transaction_category_error">Выберите категорию</string>

    <!-- Activity SmsParserCreator -->
    <string name="activity_sms_parser_creator_title">Создание обработчика СМС</string>

    <!-- BottomSheetCategories -->
    <string name="bottom_sheet_category_title_add">Добавление категории</string>
    <string name="bottom_sheet_category_title_edit">Редактирование категории</string>
    <string name="bottom_sheet_category_name_hint">Наменование категории</string>
    <string name="bottom_sheet_category_name_error">Введите наменование категории</string>

    <!-- BottomSheetSmsList -->
    <string name="bottom_sheet_sms_list_title">Список смс</string>
    <string name="bottom_sheet_sms_list_address_hint">Отправитель</string>
    <string name="bottom_sheet_sms_list_body_hint">Отправитель</string>

    <!-- Fragment Main -->
    <string name="fragment_main_empty_list_title">Список операций пуст</string>
    <string name="fragment_main_empty_list_text">Добавьте новую операцию и она будет показана здесь</string>
    <string name="fragment_main_popular">Популярные</string>

    <!-- Fragment Main -->
    <string name="fragment_sms_parser_creation_sms_template">Шаблон сообщения</string>
    <string name="fragment_sms_parser_creation_amount_hint">Сумма</string>
    <string name="fragment_sms_parser_creation_date_hint">Дата</string>
    <string name="fragment_sms_parser_creation_group_hint">Группа</string>

    <!-- FoundsView -->
    <string name="format_currency_eur__1">%.2f €</string>
    <string name="format_currency_rub__1">%.2f ₽</string>
    <string name="format_currency_usd__1">%.2f $</string>
    <string name="format_currency_byn__1">%.2f Br</string>
    <string name="format_currency_unknown__1">%.2f ¤</string>
    <string name="fragment_my_funds_total_amount_title">Расходы за неделю</string>
    <string name="fragment_my_funds_amount_title__1">Потрачено %1$s</string>
</resources>
