<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class=".CategoryBottomSheetBinding">

        <import type="android.text.TextUtils" />

        <import type="com.goodsoft.mymoney.implementations.backdrop.categories.editor.CategoryIconItem"/>

        <variable
            name="itemBinding"
            type="me.tatarka.bindingcollectionadapter2.ItemBinding&lt;CategoryIconItem&gt;" />

        <variable
            name="viewModel"
            type="com.goodsoft.mymoney.implementations.backdrop.categories.editor.CategoryViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_backdrop"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@{TextUtils.isEmpty(viewModel.categoryId) ? @string/bottom_sheet_category_title_add : @string/bottom_sheet_category_title_edit}"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                tools:text="@string/bottom_sheet_category_title_add" />

            <ImageView
                android:id="@+id/close"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/action_close"
                android:tint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_close" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/bottom_sheet_category_name_hint"
            app:error="@{viewModel.nameError}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:itemBinding="@{itemBinding}"
            app:items="@{viewModel.items}"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="5"
            tools:listitem="@layout/item_category_icon" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@{TextUtils.isEmpty(viewModel.categoryId) ? @string/action_add : @string/action_save}"
            android:textColor="@color/white"
            tools:text="@string/action_add" />
    </LinearLayout>
</layout>